# docs/api.yaml
@@ -73,6 +73,8 @@ paths:
           required: true
           type: integer
           format: int32
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -107,6 +109,8 @@ paths:
             title: Sensor
             type: object
             $ref: '#/definitions/Zone'
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -151,6 +155,8 @@ paths:
             title: Sensor
             type: object
             $ref: '#/definitions/Zone'
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -246,6 +252,8 @@ paths:
             title: Sensor
             type: object
             $ref: '#/definitions/Sensor'
+      tags:
+        - Sensors
       responses:
         '201':
           description: |
@@ -281,6 +289,8 @@ paths:
           required: true
           type: integer
           format: int32
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -315,6 +325,8 @@ paths:
             title: Sensor
             type: object
             $ref: '#/definitions/Sensor'
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -359,6 +371,8 @@ paths:
             title: Sensor
             type: object
             $ref: '#/definitions/Sensor'
+      tags:
+        - Sensors
       responses:
         '200':
           description: |
@@ -400,6 +414,8 @@ paths:
             title: Key
             type: object
             $ref: '#/definitions/Key'
+      tags:
+        - Sensors
       responses:
         '204':
           description: |
@@ -417,7 +433,7 @@ paths:
           schema:
             type: object
             $ref: '#/definitions/Error'
-  /api/v1/api/v1/data:
+  /api/v1/data:
     get:
       description: |
         Gets a collection of `SensorData` objects.
@@ -531,6 +547,8 @@ paths:
             title: SensorData
             type: object
             $ref: '#/definitions/SensorData'
+      tags:
+        - Sensors
       responses:
         '201':
           description: |
@@ -578,6 +596,90 @@ paths:
           schema:
             type: object
             $ref: '#/definitions/Error'
+  /api/v1/alerts:
+    get:
+      description: |
+        Gets a collection of `SensorAlert` objects.
+      parameters:
+        - name: limit
+          in: query
+          description: |
+            The maximum number of elements to return in the result set.
+          required: false
+          type: integer
+          format: int32
+        - name: offset
+          in: query
+          description: |
+            The number of elements to skip before returning the result set.
+          required: false
+          type: integer
+          format: int32
+        - name: zone_ids
+          in: query
+          description: |
+            A comma-separated list of `Zone` IDs. If specified, only
+            `SensorAlert` objects associated with `Sensor`s that belong to the
+            specified `Zone`s will be included in the result set.
+          required: false
+          type: string
+        - name: sensor_ids
+          in: query
+          description: |
+            A comma-separated list of `Sensor` IDs. If specified, only
+            `SensorAlert` objects associated with matching `Sensor`s will be
+            included in the result set.
+          required: false
+          type: string
+        - name: order_by
+          in: query
+          description: |
+            The field by which the result set will be ordered. To specify
+            descending order, prefix the field name with a hyphen (e.g., `-id`).
+            If this parameter is omitted, results will be sorted by their
+            `datetime` values in descending order.
+          required: false
+          type: string
+      tags:
+        - Notifications
+      responses:
+        '200':
+          description: An array of `SensorAlert` objects.
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/SensorAlert'
+        default:
+          description: Unexpected error
+          schema:
+            type: object
+            $ref: '#/definitions/Error'
+  /api/v1/alerts/{id}:
+    get:
+      description: |
+        Gets a `SensorAlert` object.
+      parameters:
+        - name: id
+          in: path
+          description: |
+            The ID of the `SensorAlert` object to get.
+          required: true
+          type: integer
+          format: int32
+      tags:
+        - Notifications
+      responses:
+        '200':
+          description: |
+            The `SensorAlert` object whose ID is `id`.
+          schema:
+            type: object
+            $ref: '#/definitions/SensorAlert'
+        default:
+          description: Unexpected error
+          schema:
+            type: object
+            $ref: '#/definitions/Error'
 definitions:
   Zone:
     type: object
@@ -601,10 +703,12 @@ definitions:
       id:
         type: integer
         format: int32
-        description: Read-only. The internal identifier for the `Sensor`.
+        description: |
+          Read-only. The internal identifier for the `Sensor`.
       guid:
         type: string
-        description: The device-defined identifier for the `Sensor`.
+        description: |
+          The device-defined identifier for the `Sensor`.
       name:
         type: string
         description: |
@@ -659,6 +763,11 @@ definitions:
   SensorData:
     type: object
     properties:
+      id:
+        type: integer
+        format: int32
+        description: |
+          Read-only. The internal identifier for the `SensorData` object.
       sensor:
         type: string
         format: url
@@ -686,6 +795,50 @@ definitions:
         description: |
           `true` if the data point caused the `Sensor`'s state to change (from
           `true` to `false` or vice versa).
+  SensorAlert:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int32
+        description: |
+          Read-only. The internal identifier for the `Sensor`.
+      sensor:
+        type: string
+        format: url
+        description: |
+          Read-only. The absolute URL for the `Sensor` to which the
+          `SensorAlert` belongs.
+      data_point:
+        type: string
+        format: url
+        description: |
+          Read-only. The absolute URL for the `SensorData` object for which the
+          `SensorAlert` was created.
+      alert_type:
+        type: string
+        description: |
+          Read-only. The type of the `SensorAlert`: `alert`, `recovered`, or
+          `down`.
+      alert_class:
+        type: string
+        description: |
+          Read-only. The method by which the user was notified. E.g., `Email`,
+          `Twilio`, etc.
+      recipients:
+        type: string
+        description: |
+          Read-only. A list of email addresses, phone numbers, etc. the
+          `SensorAlert` was sent to.
+      message:
+        type: string
+        description: |
+          Read-only. The text content of the `SensorAlert`.
+      date:
+        type: string
+        format: date-time
+        description: |
+          Read-only. The date and time at which the `SensorAlert` was generated.
   Key:
     type: object
     properties:
